2012-03-16  Andy Buckley  <andy.buckley@cern.ch>

	* Version change to 1.8.0beta0 -- nearly ready for long-awaited release!

	* pyext/setup.py.in: Adding handling for the YAML library: fix for
	Genser build from Anton Karneyeu.

	* src/Analyses/LHCB_2011_I917009.cc: Hiding lifetime-lookup error
	message if the offending particle is not a hadron.

	* include/Rivet/Math/MathHeader.hh: Using unnamespaced std::isnan
	and std::isinf as standard.

2012-03-16  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Improve default plot behaviour for 2D histograms

2012-03-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Make ATLAS_2012_I1084540 less verbose, and general code
	cleanup of that analysis.
	* New-style plugin hook in ATLAS_2011_I926145,
	ATLAS_2011_I944826 and ATLAS_2012_I1084540
	* Fix compiler warnings in ATLAS_2011_I944826 and CMS_2011_S8973270
	* CMS_2011_S8941262: Weights are double, not int.
	* disable inRange() tests in test/testMath.cc until we have a proper
	fix for the compiler warnings we see on SL5.

2012-03-07  Andy Buckley  <andy.buckley@cern.ch>

	* Marking ATLAS_2011_I919017 as VALIDATED (this should have
	happened a long time ago) and adding more references.

2012-02-28  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* lighthisto.py: Caching for re.compile(). This speeds up aida2flat
	and flat2aida by more than an order of magnitude.

2012-02-27  Andy Buckley  <andy.buckley@cern.ch>

	* doc/mk-analysis-html: Adding more LaTeX/text -> HTML conversion
	replacements, including better <,> handling.

2012-02-26  Andy Buckley  <andy.buckley@cern.ch>

	* Adding CMS_2011_S8973270, CMS_2011_S8941262, CMS_2011_S9215166,
	CMS_QCD_10_024, from CMS.

	* Adding LHCB_2011_I917009 analysis, from Alex Grecu.

	* src/Core/Analysis.cc, include/Rivet/Analysis.hh: Add a numeric-arg version of histoPath().

2012-02-24  Holger Schulz  <holger.schulz@physik.hu-berlin.de>

	* Adding ATLAS Ks/Lambda analysis.

2012-02-20  Andy Buckley  <andy.buckley@cern.ch>
